--- a/styles/main.css
+++ b/styles/main.css
@@ -9,12 +9,16 @@ body {
 
 #container {
     background-color: #ffffff;
-    width: 70%;
+    width: 50%;
     margin: 40px auto;
     height: 70vh;
     box-shadow: 5px 5px 5px #00838F;
     text-align: center;
-    padding: 30px;
+}
+
+nav {
+    background-color: #80DEEA;
+    padding: 20px;
 }
 
 .anonymous,
@@ -27,10 +31,44 @@ body {
     border-bottom: 2px solid transparent;
 }
 
-.anonymous:hover,
-.user-only.hover {
-    border-bottom: 2px solid #80DEEA;
+div .login-component,
+div .register-component {
+    margin: 40px 0;
 }
+
+.login-title,
+.register-title {
+    color: #80DEEA;
+    font-weight: 200;
+}
+
+#loginUsername,
+#loginPassword,
+#registerUsername,
+#registerPassword{
+    padding: 12px;
+    text-align: center;
+}
+
+::-webkit-input-placeholder,
+::-webkit-input-placeholder {
+    text-transform: uppercase;
+}
+
+.login-button,
+.register-button{
+    padding: 12px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 197px;
+    font-weight: 700;
+    color: #005f68;
+    background-color: #ffffff;
+    border: 1px solid #b0b0b0;
+    cursor: pointer;
+}
+
+
 
 
 
