--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=cyrillic,cyrillic-ext');
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 body {
     font: 16px 'Open Sans', sans-serif;
@@ -11,7 +12,7 @@ body {
     background-color: #ffffff;
     width: 50%;
     margin: 40px auto;
-    height: 70vh;
+    height: 78vh;
     box-shadow: 5px 5px 5px #00838F;
     text-align: center;
 }
@@ -40,12 +41,14 @@ div .register-component {
 .register-title {
     color: #80DEEA;
     font-weight: 200;
+    margin: 16px;
 }
 
 #loginUsername,
 #loginPassword,
 #registerUsername,
-#registerPassword{
+#registerPassword,
+#registerFullName{
     padding: 12px;
     text-align: center;
 }
@@ -56,7 +59,7 @@ div .register-component {
 }
 
 .login-button,
-.register-button{
+.register-button {
     padding: 12px;
     text-align: center;
     text-transform: uppercase;
@@ -68,6 +71,119 @@ div .register-component {
     cursor: pointer;
 }
 
+.login-button:hover,
+.register-button:hover {
+
+}
+
+/*Dog interpretation*/
+.head {
+    margin: 40px 40px;
+    height: 125px;
+    width: 280px;
+    background-color: #f1f1f1;
+    box-shadow: 5px 5px 8px #b0b0b0;
+    border-radius: 7px 7px 100px 7px;
+    position: relative;
+}
+
+.nose {
+    height: 24px;
+    width: 24px;
+    background-color: #00838F;
+    border-radius: 0 6px 0 15px;
+    position: absolute;
+    right: 0;
+}
+
+.ear {
+    height: 220px;
+    width: 115px;
+    background-image: radial-gradient(circle at top left, #80DEEA, #00838F 70%);
+    border-radius: 7px 7px 150px 0;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    animation: rotate 1.6s infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(5deg);
+    }
+    50% {
+        transform: rotate(-5deg);
+    }
+    100% {
+        transform: rotate(5deg);
+    }
+}
+
+.dog-subtitles {
+    width: 220px;
+    position: absolute;
+    top: 200px;
+    left: 720px;
+    color: #00BCD4;
+    font-weight: 100;
+    font-size: 2em;
+    border: 1px solid #80DEEA;
+    padding: 20px;
+    text-transform: uppercase;
+}
+
+.dog-subtitles-small-res {
+    display: none;
+}
+
+@media (max-width: 1280px) {
+    #container {
+        width: 56%;
+    }
+    .dog-subtitles {
+        left: 680px;
+    }
+}
+
+@media (max-width: 1152px) {
+    #container {
+        width: 60%;
+    }
+    .dog-subtitles {
+        left: 620px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .dog-container {
+        display: none;
+    }
+
+    .dog-subtitles-small-res {
+        display: block;
+        width: 220px;
+        margin: 30px auto;
+        color: #00BCD4;
+        font-weight: 100;
+        font-size: 2em;
+        border: 1px solid #80DEEA;
+        padding: 20px;
+        text-transform: uppercase;
+    }
+}
+
+@media (max-width: 640px) {
+    #container {
+        width: 90%;
+        margin: 40px auto;
+    }
+}
+
+@media (max-width: 320px) {
+    .dog-subtitles-small-res {
+        font-size: 1.82em;
+    }
+}
 
 
 
